# RPico-Hall-Scanner64

./: .gitignore  ACCESS_POINT_README.md  CMakeLists.txt  data-visu.py  lwipopts.h  main.c
src/: access_point.c  access_point.h  calibration.c  calibration.h  hall_scanner.c  hall_scanner.h  main.c  mcp3008_reader.c  mcp3008_reader.h  midi.c  midi.h  midi_defs.h  settings.c  settings.h  status_dispatcher.c  status_dispatcher.h
